<resources>
    <string name="app_name">Foodies_delivery</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="customer_name">Customer Name</string>
    <string name="order_id">Order Id</string>
    <string name="ordered_on">Ordered On</string>
    <string name="user_address">User Address</string>
    <string name="restaurant_address">Restaurant Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deliver_name">Ravipati Srihari</string>
    <string name="offline_text1">You are Offline Now !</string>
    <string name="offline_text2">Go online, accepts your orders and make\ncustomers happy with your services</string>

</resources>