<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/dlvr_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:elevation="20dp"
        app:cardCornerRadius="20dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dlvr_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/restaurant_address"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/actv_resort_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlvr_text2"
                android:drawableLeft="@drawable/location"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dlvr_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/actv_resort_add"
                android:padding="10dp"
                android:text="@string/user_address"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/actv_user_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlvr_text4"
                android:drawableLeft="@drawable/location"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/dlvr_lnr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/actv_user_add"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/customer_name"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/order_id"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/ordered_on"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dlvr_lnr2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlvr_lnr1"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/actv_cname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="Hari"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/actv_ord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="#0123456789"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/actv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="01-01-2021"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dlvr_lnr3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlvr_lnr2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Payment Mode"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Amount"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dlvr_lnr4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlvr_lnr3"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/actv_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="cod"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/actv_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="300"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/dlvr_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlvr_lnr4"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/bk_secondary"
                android:text="Mark as delivered"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                android:padding="10dp"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>