<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/newOrd_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dlvr_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/restaurant_address"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/newOrd_resort_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlvr_text2"
                android:drawableLeft="@drawable/location"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dlvr_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/newOrd_resort_add"
                android:padding="10dp"
                android:text="@string/user_address"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/newOrd_user_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlvr_text4"
                android:drawableLeft="@drawable/location"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/dlvr_lnr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newOrd_user_add"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/customer_name"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/order_id"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/ordered_on"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/dlvr_lnr2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlvr_lnr1"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/newOrd_cname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="Hari"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/newOrd_Ord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="#0123456789"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/newOrd_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="01-01-2021"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dlvr_lnr31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlvr_lnr2"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Payment Mode"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/newOrd_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="cod"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="Amount"
                    android:textSize="12sp"
                    android:id="@+id/dlvr_text3"/>

                <TextView
                    android:id="@+id/newOrd_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="300"
                    android:textSize="16sp" />

            </LinearLayout>

            <!--            <LinearLayout-->
            <!--                android:id="@+id/dlvr_lnr3"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_below="@id/dlvr_lnr2"-->
            <!--                android:layout_marginLeft="20dp"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:layout_marginRight="20dp"-->
            <!--                android:orientation="horizontal"-->
            <!--                android:paddingLeft="10dp"-->
            <!--                android:paddingRight="10dp">-->

            <!--                <TextView-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:gravity="center_horizontal|center_vertical"-->
            <!--                    android:text="Payment Mode"-->
            <!--                    android:textSize="12sp" />-->

            <!--                <TextView-->
            <!--                    android:layout_width="match_parent"    -->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:gravity="center_horizontal|center_vertical"-->
            <!--                    android:text="Amount"-->
            <!--                    android:textSize="12sp" />-->

            <!--            </LinearLayout>-->

            <!--            <LinearLayout-->
            <!--                android:id="@+id/dlvr_lnr4"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_below="@id/dlvr_lnr3"-->
            <!--                android:layout_marginLeft="20dp"-->
            <!--                android:layout_marginRight="20dp"-->
            <!--                android:orientation="horizontal"-->
            <!--                android:paddingLeft="10dp"-->
            <!--                android:paddingRight="10dp">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/dlvr_text9"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:gravity="center_horizontal|center_vertical"-->
            <!--                    android:text="cod"-->
            <!--                    android:textSize="18sp" />-->

            <!--                <TextView-->
            <!--                    android:id="@+id/dlvr_text10"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:gravity="center_horizontal|center_vertical"-->
            <!--                    android:text="300"-->
            <!--                    android:textSize="18sp" />-->

            <!--            </LinearLayout>-->

            <Button
                android:id="@+id/dlvr_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlvr_lnr2"
                android:layout_centerInParent="true"
                android:layout_marginTop="35dp"
                android:backgroundTint="@color/card_background"
                android:text="ACCEPT"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/dlvr_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dlvr_lnr2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/dlvr_button1"
                android:backgroundTint="#D32F2F"
                android:text="REJECT"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                android:padding="10dp"/>




        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>